--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,8 @@
     <string name="_5_km"><![CDATA[5 km >]]></string>
     <string name="_5star">★★★★★</string>
     <string name="userid">userid</string>
+    <string name="activate_account">Activate Account</string>
+    <string name="please_change_your_temporary_password_to_activate_your_account">Please change your temporary password to activate your account.</string>
+    <string name="current_password">Current Password</string>
+    <string name="confirm_new_password">Confirm New Password</string>
 </resources>
